--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,11 +1,11 @@
-{{> /layout/header}}
+{{> layout/header}}
 
 <div class="container p-5">
 
     <div class="card mb-3">
         <div class="card-body">
             <h4 class="card-title mb-3">제목1</h4>
-            <a href="/board/1" class="btn btn-primary">상세보기</a>
+            <a href="/board/1" class="btn btn-success">상세보기</a>
         </div>
     </div>
 
@@ -16,4 +16,4 @@
 
 </div>
 
-{{> /layout/footer}}
+{{> layout/footer}}
