--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -1,8 +1,8 @@
-<div class="bg-light p-5 text-center">
-    <h4>Created by Metacoding</h4>
-    <h5>☎ 010-2222-7777</h5>
-    <button class="btn btn-outline-primary">고객센터</button>
-    <button class="btn btn-outline-primary">오시는길</button>
+<div class="bg-secondary  p-5 text-center text-white">
+    <h4>Created by thcoding</h4>
+    <h5>📞 010-7777-8888</h5>
+    <button class="btn btn-outline-light">고객센터</button>
+    <button class="btn btn-outline-light">오시는길</button>
 </div>
 </body>
 
