--- a/src/main/resources/templates/user/login-form.mustache
+++ b/src/main/resources/templates/user/login-form.mustache
@@ -1,4 +1,4 @@
-{{> /layout/header}}
+{{> layout/header}}
 
 <div class="container p-5">
 
@@ -14,10 +14,10 @@
                 <div class="mb-3">
                     <input type="password" class="form-control" placeholder="Enter password" name="password">
                 </div>
-                <button type="submit" class="btn btn-primary form-control">로그인</button>
+                <button type="submit" class="btn btn-success form-control">로그인</button>
             </form>
         </div>
     </div>
 </div>
 
-{{> /layout/footer}}
+{{> layout/footer}}
