--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -1,4 +1,4 @@
-{{> /layout/header}}
+{{> layout/header}}
 
 <div class="container p-5">
 
@@ -27,7 +27,7 @@
             <form action="/reply/save" method="post">
                 <textarea class="form-control" rows="2" name="comment"></textarea>
                 <div class="d-flex justify-content-end">
-                    <button type="submit" class="btn btn-outline-primary mt-1">댓글등록</button>
+                    <button type="submit" class="btn btn-outline-success mt-1">댓글등록</button>
                 </div>
             </form>
         </div>
@@ -40,7 +40,7 @@
             <!-- 댓글아이템 -->
             <div class="list-group-item d-flex justify-content-between align-items-center">
                 <div class="d-flex">
-                    <div class="px-1 me-1 bg-primary text-white rounded">cos</div>
+                    <div class="px-1 me-1 bg-success text-white rounded">cos</div>
                     <div>댓글 내용입니다</div>
                 </div>
                 <form action="/reply/1/delete" method="post">
@@ -50,7 +50,7 @@
             <!-- 댓글아이템 -->
             <div class="list-group-item d-flex justify-content-between align-items-center">
                 <div class="d-flex">
-                    <div class="px-1 me-1 bg-primary text-white rounded">ssar</div>
+                    <div class="px-1 me-1 bg-success text-white rounded">ssar</div>
                     <div>댓글 내용입니다</div>
                 </div>
                 <form action="/reply/1/delete" method="post">
@@ -61,4 +61,4 @@
     </div>
 </div>
 
-{{> /layout/footer}}
+{{> layout/footer}}
