--- a/src/main/resources/templates/board/save-form.mustache
+++ b/src/main/resources/templates/board/save-form.mustache
@@ -1,4 +1,4 @@
-{{> /layout/header}}
+{{> layout/header}}
 
 <div class="container p-5">
 
@@ -14,10 +14,10 @@
                 <div class="mb-3">
                     <textarea class="form-control" rows="5" name="content"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary form-control">글쓰기완료</button>
+                <button type="submit" class="btn btn-success form-control">글쓰기완료</button>
             </form>
         </div>
     </div>
 </div>
 
-{{> /layout/footer}}
+{{> layout/footer}}
