--- a/src/main/resources/templates/user/update-form.mustache
+++ b/src/main/resources/templates/user/update-form.mustache
@@ -1,4 +1,4 @@
-{{> /layout/header}}
+{{> layout/header}}
 
 <div class="container p-5">
 
@@ -18,10 +18,10 @@
                 <div class="mb-3">
                     <input type="email" class="form-control" placeholder="Enter email" name="email" disabled>
                 </div>
-                <button type="submit" class="btn btn-primary form-control">회원가입수정</button>
+                <button type="submit" class="btn btn-success form-control">회원가입수정</button>
             </form>
         </div>
     </div>
 </div>
 
-{{> /layout/footer}}
+{{> layout/footer}}
