--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,4 +1,10 @@
 {{> layout/header}}
+<h1>
+    {{#sessionUser}}
+        {{username}}
+    {{/sessionUser}}
+</h1>
+
 
 <div class="container p-5">
 
