게시글 상세보기 수정,삭제 권한체크

--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -2,11 +2,14 @@
 
 <div class="container p-5">
 
-    <!-- 수정삭제버튼 -->
-    <div class="d-flex justify-content-end">
-        <button class="btn btn-warning me-1">수정</button>
-        <button class="btn btn-danger">삭제</button>
-    </div>
+    {{#pageOwner}}
+        <!-- 수정삭제버튼 -->
+        <div class="d-flex justify-content-end">
+            <button class="btn btn-warning me-1">수정</button>
+            <button class="btn btn-danger">삭제</button>
+        </div>
+    {{/pageOwner}}
+
     <div class="d-flex justify-content-end">
         <b>작성자</b> : {{board.username}}
     </div>
