--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -7,6 +7,14 @@
 
 
 <div class="container p-5">
+    <div class="d-flex justify-content-end">
+        <form action="/" method="get">
+            <label>
+                <input class="form-control" type="text" placeholder="search..." name="keyword" />
+            </label>
+            <button class="btn btn-primary">검색</button>
+        </form>
+    </div>
 
 {{#boardList}}
     <div class="card mb-3">
@@ -19,8 +27,8 @@
 
 
     <ul class="pagination d-flex justify-content-center">
-        <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        <li class="page-item {{#first}}disabled{{/first}}"><a class="page-link" href="?page={{prev}}&keyword={{keyword}}">Previous</a></li>
+        <li class="page-item {{#last}}disabled{{/last}}"><a class="page-link" href="?page={{next}}&keyword={{keyword}}">Next</a></li>
     </ul>
 
 </div>
