--- a/src/main/resources/templates/user/join-form.mustache
+++ b/src/main/resources/templates/user/join-form.mustache
@@ -8,20 +8,54 @@
     <div class="card">
         <div class="card-header"><b>회원가입을 해주세요</b></div>
         <div class="card-body">
-            <form action="/join" method="post" enctype="application/x-www-form-urlencoded">
+            <form action="/join" method="post" onsubmit="return valid()">
                 <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Enter username" name="username" value="ssar">
+                    <input id="username" type="text" class="form-control" placeholder="Enter username" name="username">
+                    <button type="button" onclick="usernameSameCheck()" class="btn btn-warning">아이디중복체크</button>
                 </div>
                 <div class="mb-3">
-                    <input type="password" class="form-control" placeholder="Enter password" name="password" value="1234">
+                    <input type="password" class="form-control" placeholder="Enter password" name="password"
+                           value="1234">
                 </div>
                 <div class="mb-3">
-                    <input type="email" class="form-control" placeholder="Enter email" name="email" value="ssar@nate.com">
+                    <input type="email" class="form-control" placeholder="Enter email" name="email"
+                           value="ssar@nate.com">
                 </div>
                 <button type="submit" class="btn btn-success form-control">회원가입</button>
             </form>
         </div>
     </div>
 </div>
+
+<script>
+    let isSameCheck = false;
+
+    function valid() {
+        if (isSameCheck == false) {
+            alert("아이디 중복체크를 해야 합니다");
+        }
+        return isSameCheck;
+    }
+
+    function usernameSameCheck() {
+        let username = $("#username").val();
+        $.ajax({
+            url: "/api/username-same-check?username=" + username,
+            type: "get"
+        }).done((res) => {
+            console.log(res);
+            if (res.body == true) {
+                isSameCheck = true;
+                alert("아이디 중복 체크 완료");
+            } else {
+                isSameCheck = false;
+                alert("동일한 아이디가 존재합니다");
+            }
+        }).fail((res) => {
+            console.log(res)
+            alert(res.responseJSON.msg);
+        });
+    }
+</script>
 
 {{> layout/footer}}
