--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -10,25 +10,24 @@
     <div class="d-flex justify-content-end">
         <form action="/" method="get">
             <label>
-                <input class="form-control" type="text" placeholder="search..." name="keyword" />
+                <input class="form-control" type="text" placeholder="search..." name="keyword"/>
             </label>
             <button class="btn btn-primary">검색</button>
         </form>
     </div>
 
-{{#boardList}}
+
     <div class="card mb-3">
         <div class="card-body">
-            <h4 class="card-title mb-3">{{title}}</h4>
-            <a href="/board/{{id}}" class="btn btn-success">상세보기</a>
+            <h4 class="card-title mb-3">제목</h4>
+            <a href="/board/id" class="btn btn-success">상세보기</a>
         </div>
     </div>
-{{/boardList}}
 
 
     <ul class="pagination d-flex justify-content-center">
-        <li class="page-item {{#first}}disabled{{/first}}"><a class="page-link" href="?page={{prev}}&keyword={{keyword}}">Previous</a></li>
-        <li class="page-item {{#last}}disabled{{/last}}"><a class="page-link" href="?page={{next}}&keyword={{keyword}}">Next</a></li>
+        <li class="page-item "><a class="page-link">Previous</a></li>
+        <li class="page-item "><a class="page-link">Next</a></li>
     </ul>
 
 </div>
