게시글 목록보기 및 검색기능 완료

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -17,17 +17,23 @@
     </div>
 
 
-    <div class="card mb-3">
-        <div class="card-body">
-            <h4 class="card-title mb-3">제목</h4>
-            <a href="/board/id" class="btn btn-success">상세보기</a>
+    {{#boardList}}
+        <div class="card mb-3">
+            <div class="card-body">
+                <h4 class="card-title mb-3">{{title}}</h4>
+                <a href="/board/{{id}}" class="btn btn-success">상세보기</a>
+            </div>
         </div>
-    </div>
+    {{/boardList}}
 
 
     <ul class="pagination d-flex justify-content-center">
-        <li class="page-item "><a class="page-link">Previous</a></li>
-        <li class="page-item "><a class="page-link">Next</a></li>
+        <li class="page-item {{#first}}disabled{{/first}}">
+            <a class="page-link" href="?page={{prev}}&keyword={{keyword}}">Previous</a>
+        </li>
+        <li class="page-item {{#last}}disabled{{/last}}">
+            <a class="page-link" href="?page={{next}}&keyword={{keyword}}">Next</a>
+        </li>
     </ul>
 
 </div>
