글쓰기 완료

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -22,7 +22,7 @@
             <ul class="navbar-nav">
                 {{#sessionUser}}
                     <li class="nav-item">
-                        <a class="nav-link" href="/board/save-form">글쓰기</a>
+                        <a class="nav-link" href="/board/saveForm">글쓰기</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/user/update-form">회원정보보기</a>
